# Software-Design-Studio

amazing-adventures/: temp.txt
cpptictactoe-maanavp2-master/include/tictactoe/: tictactoe.h
cpptictactoe-maanavp2-master/tests/: CMakeLists.txt
cpptictactoe/src/: tictactoe.cc
cpptictactoe/tests/: test-tictactoe.cc
devious-debugging-maanavp2-master/src/: TutorialFinished.txt  YourNetID.txt
final-project/: CMakeLists.txt
final-project-maanavp2-master/: DEVELOPMENT.md
final-project-maanavp2-master/apps/: run.cc
final-project-maanavp2-master/src/: CMakeLists.txt
final-project-maanavp2-master/tests/: CMakeLists.txt
final-project/apps/: CMakeLists.txt  SimpleCanonMovMaker.cc  SimpleCanonMovMaker.h
final-project/docs/: README.md
linked-list-maanavp2-master/include/cs126linkedlist/: ll.hpp
linked-list-maanavp2-master/tests/: test_ll.cc
linked-list/include/cs126linkedlist/: ll.h
mineopoly-maanavp2-master/src/mineopoly_two/: MineopolyMain.java
naive-bayes/: .gitignore
naive-bayes-maanavp2-master/apps/: classify.cc
naive-bayes-maanavp2-master/include/bayes/: classifier.h  image.h
naive-bayes-maanavp2-master/src/: model.cc  utils.cc
naive-bayes/include/bayes/: model.h  utils.h
naive-bayes/src/: CMakeLists.txt  classifier.cc  image.cc
naive-bayes/tests/: test_classifier.cc
project-proposal-maanavp2-master/: README.md
snake-maanavp2-master/include/snake/: engine.h
snake-maanavp2-master/src/: engine.cc  leaderboard.cc
snake/apps/: run.cc  snake_app.cc  snake_app.h
snake/assets/: snake.db
sudoku-maanavp2-master/apps/: CMakeLists.txt  solve.cc
sudoku-maanavp2-master/data/: badversion.spf  invalidPuzzle.spf
sudoku-maanavp2-master/src/: CMakeLists.txt  solver.cc  sudoku-puzzle.cc
sudoku-maanavp2-master/tests/: CMakeLists.txt  test-file-helper.cc
sudoku-maanavp2-master/tests/data/: example.spf
sudoku/include/: utils.h
sudoku/src/: file-helper.cc  utils.cc
sudoku/tests/: test-sudoku.cc
(+25 files in other folders)
